добавил 2 ручки с отчетами
